--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="numbers">0.2</span><span class="skill-list">Javascript</span><br>
             <span class="numbers">0.3</span><span class="skill-list">Bootstrap</span><br>
             <span class="numbers">0.4</span><span class="skill-list">C++</span><br>
-            <span class="numbers">0.5</span><span class="skill-list">Cloud Computing (AWS)</span>
+            <span class="numbers">0.5</span><span class="skill-list">Cloud Computing (AWS)</span><br>
             <span class="numbers">0.6</span><span class="skill-list">Python</span>
 
 
