--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <div class="about">
             <span class="title4">My</span><span class="title5">Intro</span>
             <h3 class="title6">About Me</h3>
-            <p class="abt-description">Hey!! Myself Apoorv Gosavi. I am a high school student, a Front-end developer and
+            <p class="abt-description">Hey!! Myself Apoorv Gosavi. I am a high school student, a enthusiastic Front-end web developer and
                 a programmer.
-                I create Personal webpages, ecommerce websites, organisation, college and school websites, buisness
-                websites etc with UX / UI user inerface.
-                Currently I am learning Python and Cloud Computing and developing my bug fixing skills. Also I have a
-                great knowledge in C++ and Javascript.
+                I create frontend Personal webpages, ecommerce websites, organisation, college and school websites, buisness
+                websites etc.
+                Currently I am learning Javascript and its frameworks, databases, python and Cloud Computing and developing my bug fixing skills. Also getting
+                updated with new technology.
             </p>
             <a href="#contact-section"><button class="btn">Contact Me</button></a><br>
         </div>
