--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="project-container">
             <div class="project-card">
                 <div class="card-img">
-                    <img class="img-card" src="./assets/img/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png"></img>
+                    <img class="img-card" src="./assets/img/otp.png"></img>
                 </div>
-                <h1 class="project-card-title">Discord Website Clone</h1>
+                <h1 class="project-card-title">OTP Generator</h1>
 
-                <a href="./page.html"><button class="card-btn">View Project</button></a>
+                <a href="https://otp-generator-beta-two.vercel.app/"><button class="card-btn">View Project</button></a>
 
             </div>
             <div class="project-card">
