--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             </div>
             <div class="project-card">
                 <div class="card-img">
-                    <img class="img-card" src="./assets/img/png-transparent-flutter-hd-logo.png"></img>
+                    <img class="img-card" src="./assets/img/blog.png"></img>
                 </div>
 
-                <h1 class="project-card-title">Flutter Website Clone</h1>
+                <h1 class="project-card-title">Blog landing page</h1>
                 <a href="./page.html"><button class="card-btn">View Project</button></a>
 
             </div>
