--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <h1 class="project-card-title">Blog landing page</h1>
-                <a href="./page.html"><button class="card-btn">View Project</button></a>
+                <a href="https://blog-landing-page-six.vercel.app/"><button class="card-btn">View Project</button></a>
 
             </div>
             <div class="project-card">
