--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <img class="img-card" src="./assets/img/download (2).png"></img>
                 </div>
 
-                <h1 class="project-card-title">Netflix Website Clone</h1>
+                <h1 class="project-card-title">Web Music Player</h1>
                 <a href="./page.html"><button class="card-btn">View Project</button></a>
 
             </div>
