--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             </div>
             <div class="project-card">
                 <div class="card-img">
-                    <img class="img-card" src="./assets/img/download (2).png"></img>
+                    <img class="img-card" src="./assets/img/music.png"></img>
                 </div>
 
                 <h1 class="project-card-title">Web Music Player</h1>
-                <a href="./page.html"><button class="card-btn">View Project</button></a>
+                <a href="https://web-music-player-wheat.vercel.app/"><button class="card-btn">View Project</button></a>
 
             </div>
         </div>
